--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
 :root {
   --blue: #3490dc;
   --indigo: #6574cd;
@@ -20016,7 +20017,18 @@ h3 {
 }
 
 html, body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
+}
+
+@media (max-width: 768px){
+  .page-header, .display-4 {
+    font-size: 20px;
+  }
+
+  .page-sub-header, .lead {
+    font-size: 16px;
+  }
+
 }
