--- a/public/css/globalCustom.css
+++ b/public/css/globalCustom.css
@@ -25,6 +25,7 @@
         /* background: #F1E4FF; */
         width: 410px!important;
         height: 639px!important;
+        border-radius: 12px !important;
         /* border: 1px solid #FFFFFF; */
         /* box-sizing: border-box; */
         /* box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.3); */
@@ -303,7 +304,7 @@
         background-color: #F1E4FF;
         /* Shadow: Grey / 4dp; */
         box-shadow: 0px 2px 4px rgba(97, 97, 97, 0.18), 0px 4px 8px rgba(97, 97, 97, 0.18);
-        border-radius: 12px;
+        border-radius: 13px !important;
     }
     
     .card .card-body {
@@ -316,7 +317,7 @@
         height: 218px;
         left: 0px;
         top: 0px;
-        border-radius: 0px 0px 15px 0px;
+        border-radius: 12px 12px 22px 0px;
         background-color: #F1E4FF;
     }
     
