--- a/public/css/globalCustom.css
+++ b/public/css/globalCustom.css
@@ -976,6 +976,6 @@
         position: absolute;
         width: 16px;
         height: 19px;
-        left: 1858px;
+        margin-left: 0.27%;
         top: 25px;
     }
