--- a/public/css/globalCustom.css
+++ b/public/css/globalCustom.css
@@ -125,7 +125,7 @@
         background-color: black;
         color: white;
         text-align: center;
-        height: 200px;
+        height: 170px;
         margin-bottom: -160%;
     }
     
@@ -253,6 +253,11 @@
         font-weight: bold;
         font-size: 36px;
         align-items: center;
+    }
+    
+    .hubungi {
+        width: 100%;
+        height: 1800px;
     }
     
     .hubungi-margin {
@@ -428,7 +433,7 @@
     .berita-p2 {
         position: absolute;
         width: 100%;
-        height: 1762px;
+        height: 3100px;
         left: 0px;
         top: 795px;
         background: #F1E4FF;
@@ -462,7 +467,7 @@
         position: absolute;
         background: #DDC0FD;
         width: 100%;
-        height: 1111px;
+        height: 3100px;
         left: 0px;
         top: 789px;
     }
@@ -864,7 +869,7 @@
     }
     
     .hub {
-        height: 1328px;
+        height: 1800px;
         width: 100%;
     }
     
