Create dynamic carousel

--- a/public/css/globalCustom.css
+++ b/public/css/globalCustom.css
@@ -476,8 +476,8 @@
         position: absolute;
         width: 545px;
         height: 355px;
-        left: 155%;
-        top: -3%;
+        left: 850px;
+        top: 12%;
     }
     
     .galeri-caption {
